# tmp

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  tmp.mmd
docs/: communication_model_research.md
src/: __init__.py  config.py  main.py
src/algo/: __init__.py  base.py  controller.py  crypto_auth.py  formation.py  jamming_response.py  llm_controller.py  mavlink.py  path_planning.py  path_planning_3d.py  spoofing.py  v2v_channel.py
src/chat/: __init__.py  app.py  llm.py  tools.py
src/rag/: __init__.py  qdrant.py
src/simulation/: __init__.py  agents.py  api.py
static/: index.html
static/css/: style.css
static/js/: app.js  chat.js  scene3d.js
